2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_items_append_lock_logout): don't show
	logout/shutdown if it's locked down. Remove extra separator that got
	added when screensaver is locked down.
	End of bug #522453.

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_lock_screen_action_available),
	(panel_lock_screen_action): check the lock screen lockdown setting
	before doing anything. The UI is already blocking the user for locking
	the screen (by making the widget non-sensitive, eg), but this is extra
	safety.
	* gnome-desktop-item-edit.c: update to make it compile because of this
	change...
	Based on a patch from Matt Keenan <matt.keenan@sun.com>
	Part of bug #522453

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_execute): s/url/uri/

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	Mount volumes if needed in panel_show_*
	Based on patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #529243

	* libpanel-util/panel-show.c: (_panel_show_mount_async_callback): new,
	callback when the mount operation is finished
	(_panel_show_handle_error): improve code, and handle
	G_IO_ERROR_NOT_MOUNTED
	(_panel_app_info_launch_uri): updated
	(panel_show_uri): ditto

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/Makefile.am: add new files
	* libpanel-util/panel-error.[ch]: new, moved from panel-util.c
	* libpanel-util/panel-glib.[ch]: moved some functions from panel-util.c
	here and rename them: panel_g_lookup_in_data_dirs(),
	panel_g_utf8_strstrcase()
	also add panel_g_lookup_in_applications_dirs
	* libpanel-util/panel-show.[ch]: new, to ease showing of URIs

	* panel-util.[ch]:
	(panel_error_dialog): moved to libpanel-util/panel-error.c
	(panel_ensure_dir): use g_mkdir()
	(panel_lookup_in_data_dirs): moved to libpanel-util/panel-error.c
	(panel_util_utf8_strstrcase): ditto
	(panel_util_gdk_pixbuf_load_from_stream): kill because we use GTK+ 2.13
	now